@@ -27,6 +27,10 @@ Jason Ernst
 	For totally redesigning the sendpage website to make it cool great,
 	and for making adorable little raccoon images to go with it.  :)
 
+Aaron Moore
+	<AMOORE@dekalbmemorial.com>
+	Found a bug with "nobody" slipping into split pages.
+
 Jonathan C. Detert
 	<detertj@msoe.edu>
 	Found a bug with the "dialout" modem setting.
